--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,13 @@
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
-  }
+    "default_icon": "icon.png"
+  },
+  "content_scripts": [
+    {
+      "matches": ["http://*/*"],
+      "js": ["content.js"],
+      "run_at": "document_end"
+    }
+  ]
 }
